namespace CampaignSystem.DTOs;

public class ProductDto
{
    public int Id { get; set; }

    public string ProductCode { get; set; } = null!;

    public string ProductName { get; set; } = null!;
}
