namespace CampaignSystem.DTOs;

public class TransactionCodeDto
{
    public int Id { get; set; }

    public string Code { get; set; } = null!;

    public string Name { get; set; } = null!;
}
