erDiagram
    SEGMENT           ||--o{ CUSTOMER                  : "gruplar"
    SEGMENT           ||--o{ CAMPAIGN_SEGMENT          : "hedeflenir"
    CUSTOMER          ||--o{ CARD                      : "sahiptir"
    PRODUCT           ||--o{ CARD                      : "tanimlar"
    PRODUCT           ||--o{ CAMPAIGN_PRODUCT          : "hedeflenir"
    MERCHANT          ||--o{ CAMPAIGN_MERCHANT         : "hedeflenir"
    TRANSACTION_CODE  ||--o{ CAMPAIGN_TRANSACTION_CODE : "hedeflenir"

    CAMPAIGN ||--o{ CAMPAIGN_SEGMENT          : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_PRODUCT          : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_MERCHANT         : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_TRANSACTION_CODE : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_PARTICIPATION    : "katilim alir"
    CAMPAIGN ||--o{ CAMPAIGN_REWARD           : "odul uretir"
    CAMPAIGN ||--o{ BATCH_RUN                 : "degerlendirilir"

    CUSTOMER ||--o{ CAMPAIGN_PARTICIPATION : "katilir"
    CARD     ||--o{ CAMPAIGN_PARTICIPATION : "katilir"

    CARD             ||--o{ TRANSACTION : "yapar"
    CUSTOMER         ||--o{ TRANSACTION : "yapar"
    MERCHANT         ||--o{ TRANSACTION : "kabul eder"
    TRANSACTION_CODE ||--o{ TRANSACTION : "tiplendirir"

    CUSTOMER  ||--o{ CAMPAIGN_REWARD : "kazanir"
    CARD      ||--o{ CAMPAIGN_REWARD : "kazanir"
    BATCH_RUN ||--o{ CAMPAIGN_REWARD : "olusturur"

    CAMPAIGN_REWARD ||--o{ CAMPAIGN_REWARD_DETAIL : "detaylanir"
    TRANSACTION     ||--o{ CAMPAIGN_REWARD_DETAIL : "kaynaklik eder"

    SEGMENT {
        int      Id          PK
        string   SegmentCode UK
        string   SegmentName
        boolean  IsActive
    }

    PRODUCT {
        int      Id          PK
        string   ProductCode UK
        string   ProductName
        boolean  IsActive
    }

    MERCHANT {
        int      Id             PK
        string   MerchantNumber UK
        string   MerchantName
        string   MCC
        boolean  IsActive
    }

    TRANSACTION_CODE {
        int      Id       PK
        string   Code     UK
        string   Name
        boolean  IsActive
    }

    CUSTOMER {
        int      Id             PK
        string   CustomerNumber UK
        string   Gender
        date     BirthDate
        int      SegmentId      FK
        boolean  IsActive
    }

    CARD {
        int      Id               PK
        int      CustomerId       FK
        int      ProductId        FK
        string   CardNumberMasked
        tinyint  CardType
        boolean  IsActive
    }

    CAMPAIGN {
        int      Id                            PK
        string   CampaignCode                  UK
        string   Name
        string   Description
        tinyint  CampaignType
        char     PeriodCode
        datetime StartDate
        datetime EndDate
        int      RewardDelayDays
        datetime EvaluationDate
        boolean  RequiresParticipation
        tinyint  AccumulationLevel
        decimal  MinTransactionAmount
        decimal  MaxTransactionAmount
        tinyint  ThresholdType
        decimal  ThresholdValue
        tinyint  RewardType
        tinyint  RewardCalculationType
        decimal  RewardValue
        decimal  RewardRate
        boolean  IsRepeatable
        int      MaxRewardCount
        decimal  MaxRewardAmountPerTransaction
        decimal  MaxRewardAmount
        tinyint  Status
        boolean  IsActive
        string   CreatedBy
        datetime CreatedDate
        string   ModifiedBy
        datetime ModifiedDate
        string   ApprovedBy
        datetime ApprovedDate
    }

    CAMPAIGN_SEGMENT {
        int      CampaignId PK,FK
        int      SegmentId  PK,FK
        boolean  IsExcluded
    }

    CAMPAIGN_PRODUCT {
        int      CampaignId PK,FK
        int      ProductId  PK,FK
        boolean  IsExcluded
    }

    CAMPAIGN_MERCHANT {
        int      CampaignId PK,FK
        int      MerchantId PK,FK
        boolean  IsExcluded
    }

    CAMPAIGN_TRANSACTION_CODE {
        int      CampaignId        PK,FK
        int      TransactionCodeId PK,FK
        boolean  IsExcluded
    }

    CAMPAIGN_PARTICIPATION {
        int      Id                PK
        int      CampaignId        FK
        int      CustomerId        FK
        int      CardId            FK
        datetime ParticipationDate
        tinyint  Channel
        tinyint  Status
    }

    TRANSACTION {
        bigint   Id                    PK
        int      CardId                FK
        int      CustomerId            FK
        int      MerchantId            FK
        int      TransactionCodeId     FK
        datetime TransactionDate
        datetime PostingDate
        decimal  Amount
        char     CurrencyCode
        tinyint  InstallmentCount
        string   AuthCode
        string   Rrn                   UK
        boolean  IsOnus
        char     PosEntryMode
        boolean  IsReversed
        bigint   OriginalTransactionId FK
    }

    BATCH_RUN {
        int      Id                        PK
        int      CampaignId                FK
        date     BusinessDate
        tinyint  RunType
        datetime StartTime
        datetime EndTime
        tinyint  Status
        int      ProcessedTransactionCount
        int      EvaluatedCustomerCount
        int      RewardedCount
        decimal  TotalRewardAmount
        string   ErrorMessage
        string   TriggeredBy
    }

    CAMPAIGN_REWARD {
        bigint   Id                         PK
        int      CampaignId                 FK
        int      CustomerId                 FK
        int      CardId                     FK
        char     PeriodCode
        int      BatchRunId                 FK
        tinyint  RewardType
        decimal  RewardValue
        int      RewardCount
        int      QualifyingTransactionCount
        decimal  QualifyingAmount
        tinyint  Status
        datetime CalculatedDate
        datetime PostedDate
    }

    CAMPAIGN_REWARD_DETAIL {
        bigint   Id                PK
        bigint   CampaignRewardId  FK
        bigint   TransactionId     FK
        decimal  TransactionAmount
        decimal  RewardAmount
    }
